Infra/kubernetes/Service/http-go-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-go-lb
spec:
  type: LoadBalancer
  selector:
    app: http-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
