Infra/kubernetes/Service/tomcat-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-deployment
spec:
  selector:
    app: tomcat-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

    apiVersion: apps/v1
    kind: Deployment
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat
      name: tomcat
    spec:
      replicas: 1
      selector:
        matchLabels:
          app: tomcat
      strategy: {}
      template:
        metadata:
          creationTimestamp: null
          labels:
            app: tomcat
        spec:
          containers:
          - image: tomcat
            name: tomcat
            resources: {}
    status: {}
